[package]
name = "site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11.1"
base64 = "0.20.0"
chrono = { version = "0.4.23", features = ["serde"] }
itertools = "0.10.5"
md5 = "0.7.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
